--- a/webwthr-main/index.html
+++ b/webwthr-main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Agent Scheduling Dashboard</title>
+    <title>Kito Dev - Sistema de Agendamentos</title>
   </head>
   <body>
     <div id="root"></div>
